Fix mobile overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@
 body,
 html {
     overflow-x: hidden;
+    position: relative;
 }
 
 .body--fixed {
